--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
-spring.datasource.url=jdbc:hsqldb:file:/c://tim/mydb
+spring.datasource.url=jdbc:hsqldb:mem:mydb
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.database-platform=org.hibernate.dialect.HSQLDialect
+debug=false
