--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.datasource.url=jdbc:hsqldb:mem:mydb
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.database-platform=org.hibernate.dialect.HSQLDialect
 debug=false
+spring.jackson.deserialization.fail-on-unknown-properties=true
